--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,83 +1,20 @@
 @charset "utf-8";
+
 html{font-size: 20px;}
 body{font-size: 1rem;display:flexd;}
 header{height: 12rem; border:1px solid red;}
 main{min-height:40rem;border:1px solid blue;}
+footer{border:1px solid pink;}
+
 /* top */
-.top {
-	font-weight:lighter;-webkit-font-smoothing: antialiased;
--moz-osx-font-smoothing: auto;
-	font-size: 1rem;
-	min-width: 40rem;
-	max-width: 100%;
-	margin: auto;
-	background: white;
-	padding: 30px;
-}
+.top {font-weight:lighter;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: auto;font-size: 1rem;min-width: 40rem;max-width: 100%;margin: auto;background: white;padding: 30px;}
 .top .logo {text-align: center;}
-.top .top-bar {
-	min-width: 30rem;
-	margin-bottom:1rem;
-	position: relative;
-	text-align: right;
-	font-size: 13px;
-	padding-right: 1rem;
-}
-
-.top .top-bar a {
-	margin-left: 2px;
-	color: #550000;
-	text-decoration: none;
-	font-weight: 800;
-}
-
-.top .top-bar a:hover {
-	text-decoration: underline;
-}
-.top .menu {
-	height: 45px;
-	background: #4285f4;
-	text-align:center;
-}
-
-.top .menu ul {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	display:inline-block;
-}
-
-.top .menu ul li {
-	float:left;
-	overflow: hidden;
-	text-align: center;
-	line-height: 45px;
-	boder: 1px solid red;
-}
-
-.top .menu ul li a {
-	position: relative;
-	display: block;
-	width: 8rem;
-	height: 45px;
-	color: #FFF;
-	font-family:;
-	font-size: 12px;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	text-decoration: none;
-	cursor: pointer;
-}
-
-.top .menu ul li a span {
-	position: absolute;
-	left: 0;
-	width: 8rem;
-}
-
-.top .menu ul li a span.over {
-	top: -45px;
-	background: #fff;
-	color: #3079F3;
-	font-weight: 900;
-}
+.top .top-bar{min-width: 30rem;margin-bottom:1rem;position: relative;text-align: right;font-size: 13px;padding-right: 1rem;}
+.top .top-bar a {margin-left: 2px;color: #550000;text-decoration: none;font-weight: 800;}
+.top .top-bar a:hover {text-decoration: underline;}
+.top .menu {height: 45px;background: #4285f4;text-align:center;margin-top:1rem;}
+.top .menu ul {list-style: none;padding: 0;margin: 0;display:inline-block;}
+.top .menu ul li {float:left;overflow: hidden;text-align: center;line-height: 45px;boder: 1px solid red;}
+.top .menu ul li a {position: relative;display: block;width: 8rem;height: 45px;color: #FFF;font-family:;font-size: 12px;letter-spacing: 1px;text-transform: uppercase;text-decoration: none;cursor: pointer;}
+.top .menu ul li a span {position: absolute;left: 0;width: 8rem;}
+.top .menu ul li a span.over {top: -45px;background: #fff;color: #3079F3;font-weight: 900;}
