--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -18,3 +18,17 @@ footer{border:1px solid pink;}
 .top .menu ul li a {position: relative;display: block;width: 8rem;height: 45px;color: #FFF;font-family:;font-size: 12px;letter-spacing: 1px;text-transform: uppercase;text-decoration: none;cursor: pointer;}
 .top .menu ul li a span {position: absolute;left: 0;width: 8rem;}
 .top .menu ul li a span.over {top: -45px;background: #fff;color: #3079F3;font-weight: 900;}
+
+/* table */
+.customer{padding: 2rem; min-height: 30rem;font-size: 1.1rem;}
+#link {width:80%; min-width: 30rem;margin: auto;text-align: center;position: relative;}
+#link a{color:white; font-size:0.8rem; text-decoration: none;}
+#link a.btn{width: 3rem; padding: 1rem 4rem 1rem 4rem;height: 1.5rem;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);}
+.table{width:80%; min-width: 30rem;margin: 0 auto 2rem auto;frame:void;}
+.table h1{font-size: 2rem; font-weight: 500rem; margin: 1rem;}
+.table table{text-align: center; margin: auto; min-width: 30rem;width: 100%;}
+.table table a{color: black; font-size:1rem; text-decoration: none;}
+.table table tr th{padding: 0.7rem;font-size: 0.9rem;color: #0074E9;}
+.table table tr td{border:1px solid #ccc;padding: 0.7rem;font-size: 0.9rem; border-right:none;border-left:none;}
+
+
