--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -4,7 +4,7 @@ html{font-size: 20px;}
 body{font-size: 1rem;display:flexd;}
 header{height: 12rem; border:1px solid red;}
 main{min-height:40rem;border:1px solid blue;}
-footer{border:1px solid pink;}
+footer{border:1px solid pink; position: absolute;left: 0;bottom: 0;width: 100%;}
 
 /* top */
 .top {font-weight:lighter;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: auto;font-size: 1rem;min-width: 40rem;max-width: 100%;margin: auto;background: white;padding: 30px;}
@@ -20,10 +20,10 @@ footer{border:1px solid pink;}
 .top .menu ul li a span.over {top: -45px;background: #fff;color: #3079F3;font-weight: 900;}
 
 /* table */
-.customer{padding: 2rem; min-height: 30rem;font-size: 1.1rem;}
+.customer{padding: 2rem; min-height: 30rem;font-size: 1.1rem; min-width: 40rem;}
 .link {width:80%;margin: auto;text-align: center;position: relative;height: 2rem;}
 .link a{color:white; font-size:0.8rem; text-decoration: none;}
-.link a.btn{width: 3rem; padding: 1rem 4rem 1rem 4rem;height: 1.5rem;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);}
+.link a.btn{width: 3rem; padding: 1rem 4rem 1rem 4rem;border: none;height: 1.5rem;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);}
 .table{width:80%; min-width: 30rem;margin: 0 auto 2rem auto;frame:void;}
 .table h1{font-size: 2rem; font-weight: 500rem; margin: 1rem;}
 .table table{text-align: center; margin: auto; min-width: 30rem;width: 100%;}
@@ -44,6 +44,5 @@ footer{border:1px solid pink;}
 .box table td.ID_MESG,.box table td.PWD_MESG{padding: 0;text-align: left;font-size: 0.7rem;padding-left: 1rem;line-height: 1rem;}
 .box hr{position: relative;margin-top: 1rem;width: 17rem;border: none;background: #ccc;height: 1px;}
 .box p{font-size: 0.7rem; color: #555;}
-
-
+.box .link input[type=submit] {padding: 0.5rem 2.5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;}
 
