--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -2,9 +2,9 @@
 
 html{font-size: 20px;}
 body{font-size: 1rem;display:flexd;}
-header{height: 12rem; border:1px solid red;}
-main{min-height:40rem;border:1px solid blue;}
-footer{border:1px solid pink; position: absolute;left: 0;bottom: 0;width: 100%;}
+header{height: 12rem; border:1px solid red;position: relative;}
+main{min-height:40rem;border:1px solid blue;position: relative;}
+footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 
 /* top */
 .top {font-weight:lighter;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: auto;font-size: 1rem;min-width: 40rem;max-width: 100%;margin: auto;background: white;padding: 30px;}
@@ -25,15 +25,17 @@ footer{border:1px solid pink; position: absolute;left: 0;bottom: 0;width: 100%;}
 .link a{color:white; font-size:0.8rem; text-decoration: none;}
 .link a.btn{width: 3rem; padding: 1rem 4rem 1rem 4rem;border: none;height: 1.5rem;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);}
 .table{width:80%; min-width: 30rem;margin: 0 auto 2rem auto;frame:void;}
-.table h1{font-size: 2rem; font-weight: 500rem; margin: 1rem;}
+.table h1{font-size: 1.5rem; font-weight: 300rem;}
 .table table{text-align: center; margin: auto; min-width: 30rem;width: 100%;}
 .table table a{color: black; font-size:1rem; text-decoration: none;}
 .table table tr th{padding: 0.7rem;font-size: 0.9rem;color: #0074E9;}
 .table table tr td{border:1px solid #ccc;padding: 0.7rem;font-size: 0.9rem; border-right:none;border-left:none;}
+.search_box{border:1px solid #ccc;}
+
 
 /* login */
-.box{text-align: center; padding: 2rem; margin: auto;width: 17rem;}
-.box img{margin: 1rem;}
+.box{text-align: center; padding: 5rem; margin: auto;width: 17rem;}
+.box img{margin: 1rem 1rem 2rem 1rem;}
 .box .login{text-align: center;margin: auto;margin-bottom: 1.5rem;}
 .box .login img{width: 20px;margin: 0;}
 .box .login input::placeholder {color: #ccc;font-size: 0.7rem;}
@@ -42,7 +44,15 @@ footer{border:1px solid pink; position: absolute;left: 0;bottom: 0;width: 100%;}
 .box table td{padding: 12px;}
 .box table input{font-size: 0.8rem;border:none;width: 13rem;}
 .box table td.ID_MESG,.box table td.PWD_MESG{padding: 0;text-align: left;font-size: 0.7rem;padding-left: 1rem;line-height: 1rem;}
-.box hr{position: relative;margin-top: 1rem;width: 17rem;border: none;background: #ccc;height: 1px;}
+.box hr{position: relative;margin-top: 2rem;width: 17rem;border: none;background: #ccc;height: 1px;}
 .box p{font-size: 0.7rem; color: #555;}
-.box .link input[type=submit] {padding: 0.5rem 2.5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;}
+.box .link input[type=submit] {padding: 0.8rem 3.5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;}
+
+/* board */
+.search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
+.search_area input[type=button]:hover{background: #0a62f2;}
+.search_area ul{display: flex; justify-content: space-between;}
+.search_area ul li{}
+.search_area input[type=text]{padding: 0.5rem;width: 15rem;border: none;}
+.search_area input[type=submit]{border: none; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
 
