index 교체 및 업데이트

--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -36,7 +36,7 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 /* login */
 .box{text-align: center; padding: 5rem; margin: auto;width: 17rem;}
 .box img{margin: 1rem 1rem 2rem 1rem;}
-.box .login{text-align: center;margin: auto;margin-bottom: 1.5rem;}
+.box .login{text-align: center;margin: auto;margin-bottom: 1rem;}
 .box .login img{width: 20px;margin: 0;}
 .box .login input::placeholder {color: #ccc;font-size: 0.7rem;}
 .box table label{font-size: 0rem;vertical-align: middle;}
@@ -44,10 +44,11 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .box table td{padding: 12px;}
 .box table input{font-size: 0.8rem;border:none;width: 13rem;}
 .box table td.ID_MESG,.box table td.PWD_MESG{padding: 0;text-align: left;font-size: 0.7rem;padding-left: 1rem;line-height: 1rem;}
-.box hr{position: relative;margin-top: 2rem;width: 17rem;border: none;background: #ccc;height: 1px;}
+.box hr{position: relative;margin-top: 3.5rem;width: 17rem;border: none;background: #ccc;height: 1px;}
 .box p{font-size: 0.7rem; color: #555;}
-.box .link input[type=submit] {padding: 0.8rem 3.5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;}
-
+.box .link input[type=submit] {padding: 0.8rem 5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;font-size: 0.8rem;}
+.box .link a{color: #366afe; font-weight: lighter; font-size: 0.75rem;}
+.box .link p{margin-bottom: 1rem;}
 /* board */
 .search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
 .search_area input[type=button]:hover{background: #0a62f2;}
