--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -49,6 +49,7 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .box .link input[type=submit] {padding: 0.8rem 5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;font-size: 0.8rem;}
 .box .link a{color: #366afe; font-weight: lighter; font-size: 0.75rem;}
 .box .link p{margin-bottom: 1rem;}
+
 /* board */
 .search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
 .search_area input[type=button]:hover{background: #0a62f2;}
@@ -57,3 +58,15 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .search_area input[type=text]{padding: 0.5rem;width: 15rem;border: none;}
 .search_area input[type=submit]{border: none; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
 
+/* EMP_REGISTER */
+.customer .emp_reg_form{width: 50%;margin: auto;}
+.customer .emp_reg_form table{width: 30rem;margin: auto;font-size: 0.9rem;font-weight: 100;margin-bottom: 1rem;}
+.customer .emp_reg_form table tr{height: 3rem;}
+.customer .emp_reg_form table th{width: 8rem;vertical-align: middle;text-align: left;}
+.customer .emp_reg_form table td{vertical-align: middle;}
+.customer .emp_reg_form table th>span.required_content{position:absolute;margin-left:-.65em;color:red;}
+.customer .emp_reg_form hr{margin: 1rem;}
+.customer .emp_reg_form h1{padding-left: 3rem;}
+.customer .emp_reg_form input[type=text],input[type=password]{padding: 0.5rem; border: 1px solid #ccc;width: 15rem;}
+.customer .emp_reg_form input.security_no {width: 6.7rem;}
+.customer .emp_reg_form .search_area ul li{margin:2rem 2rem;}
