--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -49,6 +49,7 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .box .link input[type=submit] {padding: 0.8rem 5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;font-size: 0.8rem;}
 .box .link a{color: #366afe; font-weight: lighter; font-size: 0.75rem;}
 .box .link p{margin-bottom: 1rem;}
+.box table input{padding: 0px;}
 
 /* board */
 .search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
