--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -1,10 +1,12 @@
 @charset "utf-8";
 
-html{font-size: 20px;}
-body{font-size: 1rem;display:flexd;}
+html{font-size: 20px;height: 100%}
+body{font-size: 1rem;display:flexd; height: 100%}
 header{height: 12rem; position: relative;}
-main{min-height:40rem; position: relative;}
-footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
+main{min-height:100%; position: relative;margin: 0;}
+footer{position: absolute;left: 0;bottom: 0;width: 100%;}
+.all {min-height: 100%;position: relative;padding-bottom: 13rem;}
+
 
 /* top */
 .top {font-weight:lighter;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: auto;font-size: 1rem;min-width: 40rem;max-width: 100%;margin: auto;background: white;padding: 30px;}
@@ -19,19 +21,20 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .top .menu ul li a span {position: absolute;left: 0;width: 8rem;}
 .top .menu ul li a span.over {top: -45px;background: #fff;color: #3079F3;font-weight: 900;}
 
+
 /* table */
-.customer{padding: 2rem; min-height: 30rem;font-size: 1.1rem; min-width: 40rem;}
+.customer{padding: 2rem; font-size: 1.1rem; min-width: 40rem;}
 .link {width:80%;margin: auto;text-align: center;position: relative;height: 2rem;}
-.link a{color:white; font-size:0.8rem; text-decoration: none;}
+.link a{color:white; font-size:0.7rem; text-decoration: none;}
 .link a.btn{width: 3rem; padding: 1rem 4rem 1rem 4rem;border: none;height: 1.5rem;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);}
 .table{width:80%; min-width: 30rem;margin: 0 auto 2rem auto;frame:void;}
-.table h1{font-size: 1.5rem; font-weight: 300rem;}
+.table h1{font-size: 1.5rem; font-weight: 600;}
 .table table{text-align: center; margin: auto; min-width: 30rem;width: 100%;}
-.table table a{color: black; font-size:1rem; text-decoration: none;}
-.table table tr th{padding: 0.7rem;font-size: 0.9rem;color: #0074E9;}
-.table table tr td{border:1px solid #ccc;padding: 0.7rem;font-size: 0.9rem; border-right:none;border-left:none;}
+.table table a{color: black; font-size:0.7rem; text-decoration: none;}
+.table table tr th{padding: 0.7rem;font-size: 0.7rem;color: #0074E9;}
+.table table tr td{border:1px solid #ccc;padding: 0.7rem;font-size: 0.7rem; border-right:none;border-left:none;}
 .search_box{border:1px solid #ccc;}
-
+.customer table tbody tr:hover{background: #e8e8e8;}
 
 /* login */
 .box{text-align: center; padding: 5rem; margin: auto;width: 17rem;}
@@ -42,35 +45,38 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .box table label{font-size: 0rem;vertical-align: middle;}
 .box table tr{border: 1px solid #ccc;}
 .box table td{padding: 12px;}
-.box table input{font-size: 0.8rem;border:none;width: 13rem;}
+.box table input{font-size: 0.7rem;border:none;width: 13rem;}
 .box table td.ID_MESG,.box table td.PWD_MESG{padding: 0;text-align: left;font-size: 0.7rem;padding-left: 1rem;line-height: 1rem;}
 .box hr{position: relative;margin-top: 3.5rem;width: 17rem;border: none;background: #ccc;height: 1px;}
 .box p{font-size: 0.7rem; color: #555;}
-.box .link input[type=submit] {padding: 0.8rem 5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;font-size: 0.8rem;}
+.box .link input[type=submit] {padding: 0.8rem 5rem;border: none;background: #0074E9;box-shadow: inset 0 -2px 0 rgba(0,0,0,0.35);text-shadow: 1px 1px 1px rgba(255,255,255, .22);color: #fff;font-size: 0.7rem;}
 .box .link a{color: #366afe; font-weight: lighter; font-size: 0.75rem;}
 .box .link p{margin-bottom: 1rem;}
 .box table input{padding: 0px;}
 
+
 /* board */
-.search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
+.search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .search_area input[type=button]:hover{background: #0a62f2;}
 .search_area ul{display: flex; justify-content: space-between;}
 .search_area ul li{}
 .search_area input[type=text]{padding: 0.5rem;width: 15rem;border: none;}
-.search_area input[type=submit]{border: none; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
+.search_area input[type=submit]{border: none; background: #366afe; color:white; padding: 0.5rem 1.2rem; font-size: 0.7rem;}
+.search_area input.sbm{padding: 0.8rem 1.5rem;}
+
 
 /* board_view */
-.customer .board_view {width:80%; margin: auto;}
-.customer .board_view h1{font-weight: 100; font-size: 2rem;margin: 1rem;}
-.customer .board_view h3{font-weight: 100; font-size: 1rem;margin-top: 1rem; border-bottom: 1px solid #ccc;line-height: 1.3rem;}
-.customer .board_view .title ul{display: flex;justify-content: space-between;vertical-align: middle;}
-.customer .board_view .title ul li{padding: 0.3rem;font-size: 0.8rem;}
-.customer .board_view .title ul li#title{min-width: 80%;font-size: 1rem;}
-.customer .board_view .content{min-height: 20rem;font-size: 1rem;}
-.customer .board_view .date{margin: 1rem;text-align: right;}
-.customer .board_view .date ul{display: flex;font-size: 0.8rem;width: fit-content;margin-left: auto;}
-.customer .board_view .date ul li{padding-left: 1rem;}
-.customer .board_view input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.8rem;}
+.board_view {width:80%; margin: auto; margin-bottom: 2rem;}
+.board_view h1{font-weight: 500; font-size: 1.2rem;margin: 0.5rem;}
+.board_view h3{font-weight: 100; font-size: 0.7rem; margin-top: 0.7rem; border-bottom: 1px solid #ccc;line-height: 1.3rem;}
+.board_view .title ul{display: flex;justify-content: space-between;vertical-align: middle;}
+.board_view .title ul li{padding: 0.3rem;font-size: 0.7rem;}
+.board_view .title ul li#title{min-width: 80%;font-size: 0.8rem;}
+.board_view .content{min-height: 20rem;font-size: 0.7rem; padding: 0.5rem;}
+.board_view .date{margin: 1rem;text-align: right;}
+.board_view .date ul{display: flex;font-size: 0.7rem;width: fit-content;margin-left: auto;}
+.board_view .date ul li{padding-left: 1rem;}
+.board_view input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .customer hr{position: relative;border: none;background: #ccc;height: 1px;}
 
 
@@ -92,7 +98,7 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .customer .reg_form{width: 50%;margin: auto;}
 .customer .reg_form table{margin: auto;font-size: 0.9rem;font-weight: 100;margin-bottom: 1rem;}
 .customer .reg_form table tr{height: 3rem;}
-.customer .reg_form table th{width: 8rem;vertical-align: middle;text-align: left;}
+.customer .reg_form table th{width: 8rem;vertical-align: middle;text-align: left;font-weight: 500;font-size: 0.7rem;}
 .customer .reg_form table td{vertical-align: middle;}
 .customer .reg_form table th>span.required_content{position:absolute;margin-left:-.65em;color:red;}
 .customer .reg_form hr{margin: 1rem;}
@@ -101,5 +107,25 @@ footer{border:1px solid pink; position: relative;left: 0;bottom: 0;width: 100%;}
 .customer .reg_form .search_area ul li{margin:2rem 2rem;}
 
 
+/* bottom */
+.footer-content{background:#888; text-align: center; height:9rem; line-height: 1.5rem; width: 100%; margin:auto; color: white; padding-top: 2rem;}
+.footer-content p{font-size: 0.7rem; font-weight: 50;}
+.footer-content hr{width: 2.5rem; height: 0.1rem; border: none; background: white; margin-top: 1rem; margin-bottom: 1rem;}
+.footer-content .sns-link ul li{display: inline;}
+.footer-content .sns-link a{text-decoration:none; height:4rem;font-size: 0.9rem;}
+.footer-content .sns-link img{width: 2rem; margin-left:1rem ; margin-right: 1rem;}
+.copyright{background-color: white; color: gray; font-size:0.6rem; width: 100%; position: relative; height: 2rem; line-height: 2rem;text-align: center;min-width: 30rem;}
+.footer-content .con{min-width: 30rem;}
+.footer-content .con a{text-decoration: none; color:white; font-weight: 700;}
 
+
+/* notice_view */
+.noti_view{width: 80%; margin: auto;}
+.noti_view table {	width: 100%;}
+.noti_view table thead th {padding: 1rem;}
+.noti_view table tbody tr {padding: 0.7rem;border-bottom: 1px solid #ccc;}
+.noti_view table tbody td {font-size: 0.7rem;padding: 0.7rem;}
+.noti_view table tbody tr .width {width: 5rem;}
+.noti_view table tbody tr .height {height: 10rem;}
+.noti_view h2 {margin: 1rem 0;text-align: center;font-size: 1.2rem;font-weight: 700;color: #366afe;}
 
