--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -121,11 +121,18 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 
 /* notice_view */
 .noti_view{width: 80%; margin: auto;}
-.noti_view table {	width: 100%;}
-.noti_view table thead th {padding: 1rem;}
-.noti_view table tbody tr {padding: 0.7rem;border-bottom: 1px solid #ccc;}
-.noti_view table tbody td {font-size: 0.7rem;padding: 0.7rem;}
-.noti_view table tbody tr .width {width: 5rem;}
-.noti_view table tbody tr .height {height: 10rem;}
+.noti_view table {width: 100%;}
+.noti_view table thead tr {padding: 0.7rem;border-bottom: 1px solid #ccc;}
+.noti_view table thead td {font-size: 0.7rem;padding: 0.7rem;}
+.noti_view table thead tr .width {width: 5rem;}
+.noti_view table thead tr .height {height: 10rem;}
 .noti_view h2 {margin: 1rem 0;text-align: center;font-size: 1.2rem;font-weight: 700;color: #366afe;}
+
+
+/* write area */
+.write_area{width: 60%; margin: auto;}
+.write_area h1{font-size: 1rem;font-weight: 700;}
+.write_area input[type=text]{border: 1px solid #fff;padding: 0.3rem;width: 98%;margin-bottom: 0.5rem;}
+.write_area input[type=button],[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
+.write_area .btns {display: flex;justify-content: space-between;margin: 2rem 0;} 
 
