--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -81,18 +81,20 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 
 
 /* EMPLOYEE_REGISTER */
-.customer .emp_reg_form{width: 50%;margin: auto;}
-.customer .emp_reg_form table{width: 30rem;margin: auto;font-size: 0.9rem;font-weight: 100;margin-bottom: 1rem;}
+.customer .emp_reg_form{width: 50%;margin: auto; min-width: 32rem;}
+.customer .emp_reg_form table{width: 30rem;margin: auto;font-size: 0.7rem;font-weight: 100;margin-bottom: 1rem;}
 .customer .emp_reg_form table tr{height: 3rem;}
 .customer .emp_reg_form table th{width: 8rem;vertical-align: middle;text-align: left;}
 .customer .emp_reg_form table td{vertical-align: middle;}
 .customer .emp_reg_form table th>span.required_content{position:absolute;margin-left:-.65em;color:red;}
-.customer .emp_reg_form hr{margin: 1rem;}
-.customer .emp_reg_form h1{padding-left: 3rem;}
-.customer .emp_reg_form input[type=text],input[type=password]{padding: 0.5rem; border: 1px solid #ccc;width: 15rem;}
+.customer .emp_reg_form hr{margin: 1rem 0;}
+.customer .emp_reg_form h1{line-height:2rem; padding-left: 1rem;}
+.customer .emp_reg_form input[type=text],input[type=password]{padding: 0.5rem; border: 1px solid #ccc; width: 15rem;}
 .customer .emp_reg_form input.security_no {width: 6.7rem;}
 .customer .emp_reg_form .search_area ul li{margin:2rem 2rem;}
-
+.customer .emp_reg_form .check{border: none; background:white; color: #366afe; font-size:0.6rem; font-weight: 700;}
+.select_box_top{display: flex;justify-content: space-between;}
+.select_box{padding:0.5rem; position: relative;width: 8rem; border: 1px solid #ccc;font-size: 0.7rem; color: #60666d;}
 
 /* CUSTOMER_REGISTER */
 .customer .reg_form{width: 50%;margin: auto;}
@@ -135,4 +137,18 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .write_area input[type=text]{border: 1px solid #fff;padding: 0.3rem;width: 98%;margin-bottom: 0.5rem;}
 .write_area input[type=button],[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .write_area .btns {display: flex;justify-content: space-between;margin: 2rem 0;} 
+
+
+/* pop up */
+.wrap_popup{position:relative; width: 100%; height: 100%;}
+.wrap_popup hr{margin: 0;height: 1px;background: #eaeaea; border: none;}
+.wrap_popup img{height: 1.5rem;margin: 0 1.5rem;}
+.wrap_popup>ul{background: #f7f7f7;display: flex;justify-content: end;margin-top:0.5rem; padding: 0.5rem; line-height: 1.5rem; color: #366afe;font-size: 1rem; font-weight: 700;}
+.popup{text-align: center;font-size: 0.8rem; font-weight: 300;}
+.popup ul{list-style: none;}
+.popup ul li{margin: 1rem auto;width: fit-content;line-height: 2rem; font-size: 0.75rem;color:#383838;}
+.popup .security_no {width: 6.7rem; border: 1px solid #ccc; padding: 0.5rem;}
+.popup .emp_no {width: 7rem; padding:0.7rem; border:none;}
+
+
 
