--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -137,7 +137,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 /* write area */
 .write_area{width: 60%; margin: auto;}
 .write_area h1{font-size: 1rem;font-weight: 700;}
-.write_area input[type=text]{border: 1px solid #fff;padding: 0.3rem;width: 98%;margin-bottom: 0.5rem;}
+.write_area input[type=text]{border: 1px solid #fff;padding: 0.3rem;width: 50%;margin-bottom: 0.5rem;}
 .write_area input[type=button],[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .write_area .btns {display: flex;justify-content: space-between;margin: 2rem 0;} 
 
@@ -146,7 +146,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .wrap_popup{position:relative; width: 100%; height: 100%;}
 .wrap_popup hr{margin: 0;height: 1px;background: #eaeaea; border: none;}
 .wrap_popup img{height: 1.5rem;margin: 0 1.5rem;}
-.wrap_popup>ul{background: #f7f7f7;display: flex;justify-content: end;margin-top:0.5rem; padding: 0.5rem; line-height: 1.5rem; color: #366afe;font-size: 1rem; font-weight: 700;}
+.wrap_popup>ul{background: #f7f7f7;display: flex;justify-content: end; padding: 0.5rem; line-height: 1.5rem; color: #366afe;font-size: 1rem; font-weight: 700;}
 .popup{text-align: center;font-size: 0.8rem; font-weight: 300;}
 .popup ul{list-style: none;}
 .popup ul li{margin: 1rem auto;width: fit-content;line-height: 2rem; font-size: 0.75rem;color:#383838;}
