--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -128,11 +128,13 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .noti_view{width: 80%; margin: auto;}
 .noti_view table {width: 100%;}
 .noti_view table thead tr {padding: 0.7rem;border-bottom: 1px solid #ccc;}
-.noti_view table thead td {font-size: 0.7rem;padding: 0.7rem;}
+.noti_view table thead tr td {font-size: 0.7rem;padding: 0.7rem;}
+.noti_view table thead tr td a{text-decoration: none; color:#366afe;font-weight: 700;}
+.noti_view table thead tr td a:hover{text-decoration: underline;}
+.noti_view table thead tr td a:focus{color:red;}
 .noti_view table thead tr .width {width: 5rem;}
 .noti_view table thead tr .height {height: 10rem;}
 .noti_view h2 {margin: 1rem 0;text-align: center;font-size: 1.2rem;font-weight: 700;color: #366afe;}
-
 
 /* write area */
 .write_area{width: 60%; margin: auto;}
