--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -148,7 +148,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .wrap_popup{position:relative; width: 100%; height: 100%;}
 .wrap_popup hr{margin: 0;height: 1px;background: #eaeaea; border: none;}
 .wrap_popup img{height: 1.5rem;margin: 0 1.5rem;}
-.wrap_popup>ul{background: #f7f7f7;display: flex;justify-content: end; padding: 0.5rem; line-height: 1.5rem; color: #366afe;font-size: 1rem; font-weight: 700;}
+.wrap_popup>ul{background: #f7f7f7;display: flex;justify-content: end; padding: 0.5rem; padding-top:1rem; line-height: 1.5rem; color: #366afe;font-size: 1rem; font-weight: 700;}
 .popup{text-align: center;font-size: 0.8rem; font-weight: 300;}
 .popup ul{list-style: none;}
 .popup ul li{margin: 1rem auto;width: fit-content;line-height: 2rem; font-size: 0.75rem;color:#383838;}
