--- a/WebContent/css/product.css
+++ b/WebContent/css/product.css
@@ -121,13 +121,18 @@ input[type="button"] {
 	margin-right: 5px;
 }
 
-.search input[type=submit] {
-	width: 100%;
-	height: 33px;
-	font-family: "맑은 고딕";
-	margin: 0px 5px 0px 10px;
-	float: right;
+.list input[type=submit] {
+	width: 30%; 
+	height: 20px; 
+	border: 1px solid black;
+	background: #DEDEDE;;
+	color: black;
+	padding: 0px;
+	font-size: 12px; 
+	
 }
+
+.list input[type=number]{width: 50% }
 
 select {
 	width: 100px;
@@ -151,6 +156,10 @@ select {
 .title_area{display: flex;justify-content: space-between; line-height: 30px; font-size: 1rem;}
 .register, .list{margin: 1rem 0;}
 .title_area input[type=submit]{border: none;background: #366afe; color: white; padding: 0.5rem 1rem; font-size: 0.7rem; font-weight: 700;}
-.wrap table td a{color: black; text-decoration: none; padding: 0 3px;}
+.wrap table td a{text-decoration: none; padding: 0 3px;}
 .wrap table td a:hover {text-decoration: underline;}
 #go{width: 40px;  background: #DEDEDE; color: black; border: 1px solid black; padding: 0;}
+
+
+
+
