--- a/WebContent/css/product.css
+++ b/WebContent/css/product.css
@@ -122,7 +122,7 @@ input[type="button"] {
 }
 
 .list input[type=submit] {
-	width: 30%; 
+	width: 40px; 
 	height: 20px; 
 	border: 1px solid black;
 	background: #DEDEDE;;
