--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -57,12 +57,11 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 
 
 /* board */
-.search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
-.search_area input[type=button]:hover{background: #0a62f2;}
 .search_area ul{display: flex; justify-content: space-between;}
-.search_area ul li{}
+.search_area input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
+.search_area input[type=submit]{border: none; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
+.search_area input[type=button]:hover,input[type=submit]:hover{background: #0a62f2;}
 .search_area input[type=text]{padding: 0.5rem;width: 15rem;border: none;}
-.search_area input[type=submit]{border: none; background: #366afe; color:white; padding: 0.5rem 1.2rem; font-size: 0.7rem;}
 .search_area input.sbm{padding: 0.8rem 1.5rem;}
 
 
@@ -78,6 +77,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .board_view .date ul{display: flex;font-size: 0.7rem;width: fit-content;margin-left: auto;}
 .board_view .date ul li{padding-left: 1rem;}
 .board_view input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
+.board_view input[type=button]:hover{background: #0a62f2;}
 .customer hr{position: relative;border: none;background: #ccc;height: 1px;}
 
 
@@ -141,7 +141,8 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .write_area h1{font-size: 1rem;font-weight: 700;}
 .write_area input[type=text]{border: 1px solid #fff;padding: 0.3rem;width: 50%;margin-bottom: 0.5rem;}
 .write_area input[type=button],[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
-.write_area .btn {display: flex;justify-content: space-between;margin: 2rem 0;} 
+.write_area input[type=button]:hover,[type=submit]:hover{background: #0a62f2;}
+.write_area .btns {display: flex;justify-content: space-between;margin: 2rem 0;} 
 
 
 /* pop up */
@@ -158,16 +159,17 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 
 /* main */
 .wrapper_main{padding: 1rem 2rem 6rem 2rem; min-width: 40rem; width: 80%;margin: auto;}
+.wrapper_main hr{margin:3rem 0; border: none; height: 1px; background: #ccc;}
+.calender { padding-left: 5rem; padding-top:1.5rem; width: fit-content; margin: auto;}
+.first_line {display: flex; justify-content: center;width: 100%}
 .title_more{ display: flex;justify-content: space-between; margin: none;}
 .title_more p{margin-bottom: 0.5rem; font-weight:700; color:#366afe; padding-left: 1rem;}
 .title_more a{padding-right:0.5rem; cursor:pointer; text-decoration: none; font-size: 0.7rem; color:#366afe;}
-.first_line {display: flex; justify-content: center;width: 100%}
 .noti_preview {width: 100%;margin: auto;}
 .noti_preview table{width: 100%;min-width: 22rem;margin: auto;}
 .noti_preview table tr{border-bottom: 1px solid #ddd;}
 .noti_preview table tr th{vertical-align: middle; background-color:#f3f3f3; color: black; font-size:0.7rem; height: 1.5rem; padding: 0.5rem; border-bottom:1px solid #ddd;}
 .noti_preview table tr td{text-align: center;padding: 0.5rem; font-size: 0.7rem;}
-.calender { padding-left: 5rem; padding-top:1.5rem; width: fit-content; margin: auto;}
 .ui-datepicker{font-size: 16px;}
 .ui-datepicker select.ui-datepicker-month{ width:30%; font-size: 11px; }
 .ui-datepicker select.ui-datepicker-year{ width:40%; font-size: 11px; }
@@ -175,5 +177,4 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .display_board p{margin: 0 0 2rem 0;text-align: center; background: #f3f3f3; }
 .display_board h2{color:#366afe; font-size: 0.9rem; margin: 0 auto 0.5rem auto;width: fit-content;}
 .display_board input {width: 70%; height: 1rem; padding: 0.5rem; border: 0;background: #f3f3f3;}
-.wrapper_main hr{margin:3rem 0; border: none; height: 1px; background: #ccc;}
 
