--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -2,16 +2,16 @@
 
 html{font-size: 20px;height: 100%}
 body{font-size: 1rem;display:flexd; height: 100%}
-header{height: 12rem; position: relative;}
-main{min-height:100%; position: relative;margin: 0;}
-footer{position: absolute;left: 0;bottom: 0;width: 100%;}
+header{height: 12rem; position: relative; min-width: 40rem;}
+main{min-height:100%; position: relative;margin: 0; min-width: 40rem;}
+footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .all {min-height: 100%;position: relative;padding-bottom: 13rem;}
 
 
 /* top */
-.top {font-weight:lighter;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: auto;font-size: 1rem;min-width: 40rem;max-width: 100%;margin: 30px auto auto auto;background: white;padding: 30px;}
+.top {min-width: 40rem; font-weight:lighter;-webkit-font-smoothing: antialiased;-moz-osx-font-smoothing: auto;font-size: 1rem;max-width: 100%;margin: 30px auto auto auto;background: white;padding: 30px;}
 .top .logo {text-align: center;}
-.top .top-bar{min-width: 30rem;margin-bottom:1rem;position: relative;text-align: right;font-size: 13px;padding-right: 1rem;}
+.top .top-bar{margin-bottom:1rem;position: relative;text-align: right;font-size: 13px;padding-right: 1rem;}
 .top .top-bar a {margin-left: 2px;color: #366afe;text-decoration: none;font-weight: 800;}
 .top .top-bar a:hover {text-decoration: underline;}
 .top .menu {height: 44.5px;background: #4285f4;text-align:center;margin-top:1rem;}
@@ -112,7 +112,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .customer .reg_form .search_area .btns{display: none;}
 
 /* bottom */
-.footer-content{background:#888; text-align: center; height:9rem; line-height: 1.5rem; width: 100%; margin:auto; color: white; padding-top: 2rem;}
+.footer-content{min-width: 40rem;background:#888; text-align: center; height:9rem; line-height: 1.5rem; width: 100%; margin:auto; color: white; padding-top: 2rem;}
 .footer-content p{font-size: 0.7rem; font-weight: 50;}
 .footer-content hr{width: 2.5rem; height: 0.1rem; border: none; background: white; margin: 1rem auto;}
 .footer-content .sns-link ul li{display: inline;}
@@ -178,3 +178,11 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%;}
 .display_board h2{color:#366afe; font-size: 0.9rem; margin: 0 auto 0.5rem auto;width: fit-content;}
 .display_board input {width: 70%; height: 1rem; padding: 0.5rem; border: 0;background: #f3f3f3;}
 
+@media all and (max-width:960px) {
+.calender {padding-left: 2rem;}
+.ui-datepicker {width: auto;}
+.wrapper_main{min-width: 20rem;}
+.top {min-width: 20rem;}
+.footer-content {min-width: 40rem;}
+.customer {min-width: 20rem;}
+}
