--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -139,11 +139,16 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 /* write area */
 .write_area{width: 60%; margin: auto;}
 .write_area h1{font-size: 1rem;font-weight: 700;}
-.write_area input[type=text]{border: 1px solid #fff;padding: 0.3rem;width: 50%;margin-bottom: 0.5rem;}
+.write_area input[type=text]{border: 1px solid #fff;padding: 0.3rem;width: 100%;margin-bottom: 0.5rem;}
 .write_area input[type=button],[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .write_area input[type=button]:hover,[type=submit]:hover{background: #0a62f2;}
 .write_area .btns {display: flex;justify-content: space-between;margin: 2rem 0;} 
-
+.titleandfile{display: flex;justify-content: space-between;}
+.inputfile {width: 0.1px;height: 0.1px;opacity: 0;overflow: hidden;position: absolute;z-index: -1;}
+.inputfile+label{font-size: 0.7em;font-weight: 700;color: #366afe;padding:0.5rem;display: inline-block;cursor: pointer;}
+.inputfile:focus + label {outline: 1px dotted #000; outline: -webkit-focus-ring-color auto 5px;}
+.titleandfile li{width: 20rem;}
+.choose_file{text-align: end;}
 
 /* pop up */
 .wrap_popup{position:relative; width: 100%; height: 100%;}
@@ -179,10 +184,15 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .display_board input {width: 70%; height: 1rem; padding: 0.5rem; border: 0;background: #f3f3f3;}
 
 @media all and (max-width:960px) {
-.calender {padding-left: 2rem;}
-.ui-datepicker {width: auto;}
-.wrapper_main{min-width: 20rem;}
-.top {min-width: 20rem;}
-.footer-content {min-width: 40rem;}
-.customer {min-width: 20rem;}
-}
+.calender {padding-left: 0rem;}
+.ui-datepicker {width: 12rem;}
+.wrapper_main{min-width: 20rem;max-width: 100%;}
+.top {min-width: 20rem;max-width: 100%;}
+.footer-content {min-width: 20rem;max-width: 100%;}
+.customer {min-width: 20rem;max-width: 100%;}
+header,main,footer{min-width: 20rem;max-width: 100%;}
+.table {min-width: 20rem;max-width: 100%;}
+.table table {min-width: 20rem;max-width: 100%;}
+.first_line {margin: auto;display: block;width: 20rem;max-width: 100%;}
+.noti_preview table {min-width: 20rem;max-width: 100%;}
+.ui-widget.ui-widget-content {margin: auto;}
