--- a/WebContent/css/product.css
+++ b/WebContent/css/product.css
@@ -144,7 +144,8 @@ select {
 	-moz-appearance: none;
 	appearance: none;
 	padding: .8em .5em;
-	border: none;
+	border-right: none;
+	border: 1px solid #ccc;
 }
 
 #search{border: 1px solid black; background: #DEDEDE; color: black;}
@@ -154,7 +155,7 @@ select {
 .title_area{display: flex;justify-content: space-between; line-height: 30px; font-size: 1rem;}
 .register, .list{margin: 1rem 0;}
 .list a{font-size: 0.8rem; font-weight: 500;}
-.wrap .title_area input[type=text]{width: 62%;}
+.wrap .title_area input[type=text]{width: 50%;border: 1px solid #ccc;}
 .wrap .title_area input.pro_smb{border: none;background: #366afe; color: white; padding: 0.5rem 1rem; font-size: 0.7rem; font-weight: 700;}
 .wrap table tr td a{text-decoration: none; padding: 0 3px; color:black;}
 .wrap table td a:hover {text-decoration: underline;}
