--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -4,8 +4,8 @@ html{font-size: 20px;height: 100%}
 body{font-size: 1rem;display:flexd; height: 100%}
 header{height: 12rem; position: relative; min-width: 40rem;}
 main{min-height:100%; position: relative;margin: 0; min-width: 40rem;}
-footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
-.all {min-height: 100%;position: relative;padding-bottom: 13rem;}
+footer{position: relative;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
+.all {min-height: 100%;position: relative;display: contents;}
 
 
 /* top */
@@ -58,12 +58,12 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 
 
 /* board */
-.search_area ul{display: flex; justify-content: space-between;}
+.search_area ul{display: flex; justify-content: end;}
 .search_area input[type=button],input[type=submit]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .search_area input[type=button]:hover,input[type=submit]:hover{background: #0a62f2;}
 .search_area input[type=text]{padding: 0.5rem;width: 15rem;border: 1px solid #ccc;}
 .search_area input.sbm{padding: 0.8rem 1.5rem;}
-
+.search_area h3{margin-bottom: 0.5rem;}
 
 /* board_view */
 .board_view {width:80%; margin: auto; margin-bottom: 2rem;}
@@ -79,6 +79,7 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .board_view input[type=button]{border: 0px; background: #366afe; color:white; padding: 0.8rem 1.5rem; font-size: 0.7rem;}
 .board_view input[type=button]:hover{background: #0a62f2;}
 .customer hr{position: relative;border: none;background: #ccc;height: 1px;}
+.search_area_for_btn ul{display: flex; justify-content: space-between;}
 
 
 /* EMPLOYEE_REGISTER */
@@ -135,7 +136,6 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .noti_view table thead tr .height {height: 10rem;}
 .noti_view h2 {margin: 1rem 0;text-align: center;font-size: 1.2rem;font-weight: 700;color: #366afe;}
 
-
 /* write area */
 .write_area{width: 60%; margin: auto;}
 .write_area h1{font-size: 1rem;font-weight: 700;}
@@ -165,7 +165,6 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 /* main */
 .wrapper_main{padding: 1rem 2rem 6rem 2rem; min-width: 40rem; width: 80%;margin: auto;}
 .wrapper_main hr{margin:3rem 0; border: none; height: 1px; background: #ccc;}
-.calender { padding-left: 5rem; padding-top:1.5rem; width: fit-content; margin: auto;}
 .first_line {display: flex; justify-content: center;width: 100%}
 .title_more{ display: flex;justify-content: space-between; margin: none;}
 .title_more p{margin-bottom: 0.5rem; font-weight:700; color:#366afe; padding-left: 1rem;}
@@ -182,7 +181,12 @@ footer{position: absolute;left: 0;bottom: 0;width: 100%; min-width: 40rem;}
 .display_board p{margin: 0 0 2rem 0;text-align: center; background: #f3f3f3; }
 .display_board h2{color:#366afe; font-size: 0.9rem; margin: 0 auto 0.5rem auto;width: fit-content;}
 .display_board input {width: 70%; height: 1rem; padding: 0.5rem; border: 0;background: #f3f3f3;}
+.calender { padding-left: 5rem; padding-top:1.5rem; width: fit-content; margin: auto;}
+.ui-widget-header {background: #f3f3f3;}
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight {border: 1px solid #4285f4;background: #4285f4;color: #ffffff;font-weight: 500;}
 
+
+/* media */
 @media all and (max-width:960px) {
 .calender {padding-left: 0rem;margin-top: 1rem;}
 .ui-datepicker {width: 12rem;}
@@ -200,6 +204,8 @@ header,main,footer{min-width: 20rem;max-width: 100%;}
 .register table input {width: 50%;}
 .register th, .list th{font-size: 10px;}
 .register td {font-size: 10px;padding: 3px;vertical-align: middle;}
+.top .menu ul li a span {width: 5.5rem;}
+.top .menu ul li a {width: 5.5rem;}
 }
 
 @media all and (max-width:1024px) {
@@ -213,7 +219,10 @@ select{height: 40px;}
 .board_view .title ul li#title {min-width: 70%;}
 .write_area {width: 80%;}
 .emp_reg_form #check, #check2 {font-size: 0.6rem;}
+.ui-datepicker select.ui-datepicker-month {height: auto;}
 }
+
+
 
 
 
